* Fixed issue where closing the notification when severity was guiding mis-aligned the notif element * Added a class name to items container to for easier future styling

--- a/muikku/src/main/webapp/resources/theme-muikku/sass/flex/_notif-queue.scss
+++ b/muikku/src/main/webapp/resources/theme-muikku/sass/flex/_notif-queue.scss
@@ -8,7 +8,12 @@
 }
 
 .notification-queue-items {
+  margin: 0 auto;
+  max-width: 600px;
 
+  &.severity-guiding {
+    max-width: 480px;
+  }
 }
 
 .notification-queue-item {
